k8s/service.yml
apiVersion: v1
kind: Service
metadata:
  name: demo-nodejs-service

spec:
  type: ClusterIP

  selector:
    app: demo-nodejs-app

  ports:
    - port: 80
      targetPort: 3000
